# AIAgent-Chat-With-Doc

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.ps1  setup.py  setup.sh
src/: __init__.py  agent.py  config.py  document_processor.py  embeddings.py  mcp_client.py  prompts.py  retrieval.py  utils.py  vector_store.py
src/mcp_server/: __init__.py  server.py  tools.py
tests/: __init__.py  test_document_processor.py
